# haskell-gamechanger

./: .gitignore  404.html  CLAUDE.md  README.md  cabal.project  flake.nix  haskell-gamechanger.cabal  index.html  justfile  mkdocs.yml  sitemap.xml
.github/workflows/: ci.yml  deploy-docs.yml
.specify/memory/: constitution.md
app/: Main.hs
cbits/: gc_lzma_alone.c
data/: config.json
data/rdf/: core-ontology.ttl  gamechanger-ontology.ttl  graph.ttl
data/tutorials/: overview.json
docs/: gcscript.md  index.md  integration.md  intent-dsl.md  ontology.md  protocol.md  scope.md  security.md  tutorial.md
gcscript/: index.html
integration/: index.html
intent-dsl/: index.html
nix/: apps.nix  checks.nix  project.nix
ontology/: index.html
protocol/: index.html
scope/: index.html
scripts/: q2-probe-laptop-AGENT.md  q2-probe.hs
search/: search_index.json
security/: index.html
specs/001-haskell-project-skeleton/: plan.md  quickstart.md  spec.md  tasks.md
specs/002-script-types/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/002-script-types/checklists/: requirements.md
specs/003-gamechanger-encoding-lzma1/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/005-gamechanger-intent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-gcscript-ast/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-haskell-client-cli/: q2-result.md  spec.md
src/: GameChanger.hs
src/GameChanger/: Encoding.hs  GCScript.hs  Intent.hs  Script.hs
src/GameChanger/Encoding/: LzmaAlone.hs
src/GameChanger/GCScript/: Common.hs  Functions.hs
src/GameChanger/Intent/: Handles.hs
src/GameChanger/Script/: Smart.hs  Types.hs
test/: Arbitrary.hs  EncodingSpec.hs  GCScriptSpec.hs  GenFixtures.hs  Golden.hs  IntentSpec.hs  Spec.hs
test/GCScriptSpec/: Generators.hs
test/IntentSpec/: VoteOnProposal.hs
test/fixtures/resolver-urls/: build-tx.json  build-tx.txt  sign-data.json  sign-data.txt  submit-tx.json  submit-tx.txt
test/golden/: build-tx.json  export-copy.json  export-download.json  export-post.json  export-qr.json  export-return.json  get-utxos.json  sign-data.json  sign-tx.json  submit-tx.json
test/golden/gcscript/: pinned-commit.txt
tutorial/: index.html
