cabal-version: 3.0
name:          haskell-gamechanger
version:       0.1.0.0
synopsis:      Haskell client for the GameChanger Cardano wallet
description:
  Backend-only Haskell library for driving the GameChanger browser
  wallet via its JSON script protocol. See the
  <https://lambdasistemi.github.io/haskell-gamechanger/ documentation>
  for scope, protocol notes, and integration topologies.

license:       Apache-2.0
license-file:  LICENSE
author:        Paolo Veronelli
maintainer:    paolo.veronelli@gmail.com
copyright:     2026 Paolo Veronelli
category:      Cardano
build-type:    Simple
homepage:      https://lambdasistemi.github.io/haskell-gamechanger/
bug-reports:   https://github.com/lambdasistemi/haskell-gamechanger/issues

source-repository head
  type:     git
  location: https://github.com/lambdasistemi/haskell-gamechanger

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-export-lists
    -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

library
  import:            warnings
  hs-source-dirs:    src
  exposed-modules:
    GameChanger
    GameChanger.Encoding
    GameChanger.Encoding.LzmaAlone
    GameChanger.GCScript
    GameChanger.GCScript.Common
    GameChanger.GCScript.Functions
    GameChanger.Intent
    GameChanger.Intent.Handles
    GameChanger.Script
    GameChanger.Script.Smart
    GameChanger.Script.Types

  c-sources:         cbits/gc_lzma_alone.c
  pkgconfig-depends: liblzma
  build-depends:
    , aeson        ^>=2.2
    , base         >=4.19   && <5
    , base64       ^>=1.0
    , bytestring   >=0.11   && <0.13
    , containers   >=0.6    && <0.8
    , lzma         >=0.0.1  && <0.1
    , operational  ^>=0.2.4
    , text         >=2.0    && <2.2

  default-language:  Haskell2010

executable hgc
  import:           warnings
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
    , base                 >=4.19 && <5
    , haskell-gamechanger
    , text                 >=2.0  && <2.2

  default-language: Haskell2010

-- Throwaway probe for issue #25 Q2 (does beta wallet accept
-- http://localhost in returnURLPattern?). Removed once Q2 is
-- answered — see specs/007-haskell-client-cli/spec.md.
executable q2-probe
  import:           warnings
  main-is:          q2-probe.hs
  hs-source-dirs:   scripts
  build-depends:
    , aeson                ^>=2.2
    , base                 >=4.19 && <5
    , base64               ^>=1.0
    , bytestring           >=0.11 && <0.13
    , containers           >=0.6  && <0.8
    , haskell-gamechanger
    , text                 >=2.0  && <2.2

  default-language: Haskell2010

-- Regenerates the resolver-URL fixtures in test/fixtures/resolver-urls/
-- from the #6 goldens in test/golden/. Run by hand (inside `nix develop`)
-- when a #6 golden changes or a new fixture is added:
--
-- @cabal run gen-fixtures@
--
-- The fixtures are committed, so this exe does not run in CI.
executable gen-fixtures
  import:           warnings
  main-is:          GenFixtures.hs
  hs-source-dirs:   test
  build-depends:
    , aeson                ^>=2.2
    , base                 >=4.19 && <5
    , bytestring           >=0.11 && <0.13
    , haskell-gamechanger
    , text                 >=2.0  && <2.2

  default-language: Haskell2010

test-suite test
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  other-modules:
    Arbitrary
    EncodingSpec
    GCScriptSpec
    GCScriptSpec.Generators
    Golden
    IntentSpec
    IntentSpec.VoteOnProposal

  build-depends:
    , aeson                ^>=2.2
    , base                 >=4.19   && <5
    , bytestring           >=0.11   && <0.13
    , containers           >=0.6    && <0.8
    , directory            >=1.3    && <1.4
    , filepath             >=1.4    && <1.6
    , haskell-gamechanger
    , operational          ^>=0.2.4
    , QuickCheck           ^>=2.14
    , scientific           >=0.3    && <0.4
    , tasty                >=1.5    && <1.6
    , tasty-golden         >=2.3    && <2.4
    , tasty-hunit          >=0.10   && <0.11
    , tasty-quickcheck     ^>=0.10
    , text                 >=2.0    && <2.2
    , vector               >=0.13   && <0.14

  default-language: Haskell2010
